--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <body>
   <div class="terminal">
     <div id="typed-text"></div>
-    <a href="phase1.html" id="enterBtn" class="btn">Enter the SOC</a>
+    <a href="Phase1.html" id="enterBtn" class="btn">Enter the SOC</a>
   </div>
 
   <script>
