--- a/phase2.html
+++ b/phase2.html
@@ -69,7 +69,7 @@
 <body>
   <header>
     <h1>🛡️SOC-SIMULATION LAB</h1>
-    <p>Phase 2 – ArchLinux + Essential Tools | <a href="phase1.html" class="btn">Go to Phase 1</a></p>
+    <p>Phase 2 – ArchLinux + Essential Tools | <a href="Phase1.html" class="btn">Go to Phase 1</a></p>
   </header>
 
   <section>
@@ -125,7 +125,7 @@
   </section>
 
   <footer>
-    <p>© 2025 SIEMCITY. Hosted on <a href="https://github.com/yourusername/your-repo">GitHub Pages</a>. | <a href="phase1.html" class="btn">Go to Phase 1</a></p>
+    <p>© 2025 SIEMCITY. Hosted on <a href="https://github.com/yourusername/your-repo">GitHub Pages</a>. | <a href="Phase1.html" class="btn">Go to Phase 1</a></p>
   </footer>
 </body>
 </html>
