--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
   </style>
 </head>
 <body>
+<audio autoplay loop>
+    <source src="Hackers.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
   <div class="terminal">
     <div id="typed-text"></div>
     <a href="Phase1.html" id="enterBtn" class="btn">Enter the SOC</a>
